src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AHPRA_Country__c</fullName>
        <label>AHPRA - Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Country_of_Qualifiation__c</fullName>
        <label>AHPRA - Country of Qualifiation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Date_Updated__c</fullName>
        <label>AHPRA - Date Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AHPRA_Error__c</fullName>
        <label>AHPRA_Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AHPRA_First_Registration__c</fullName>
        <label>AHPRA - First Registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AHPRA_Languages__c</fullName>
        <label>AHPRA - Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Match__c</fullName>
        <label>AHPRA-  Match</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AHPRA_Name__c</fullName>
        <label>AHPRA - Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Postcode__c</fullName>
        <label>AHPRA - Postcode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Profession__c</fullName>
        <label>AHPRA - Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Chinese Medicine Practitioner</fullName>
                </value>
                <value>
                    <fullName>Chiropractor</fullName>
                </value>
                <value>
                    <fullName>Dental Practitioner</fullName>
                </value>
                <value>
                    <fullName>Medical Radiation Practitioner</fullName>
                </value>
                <value>
                    <fullName>Midwife</fullName>
                </value>
                <value>
                    <fullName>Occupational therapist</fullName>
                </value>
                <value>
                    <fullName>Optometrist</fullName>
                </value>
                <value>
                    <fullName>Osteopath</fullName>
                </value>
                <value>
                    <fullName>Paramedic</fullName>
                </value>
                <value>
                    <fullName>Pharmacist</fullName>
                </value>
                <value>
                    <fullName>Physiotherapist</fullName>
                </value>
                <value>
                    <fullName>Podiatrist</fullName>
                </value>
                <value>
                    <fullName>Psychologist</fullName>
                </value>
                <value>
                    <fullName>Medical Practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AHPRA_Qualification__c</fullName>
        <label>AHPRA - Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Registration_Number__c</fullName>
        <label>AHPRA - Registration Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Registration_Status__c</fullName>
        <label>AHPRA - Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AHPRA_Sex__c</fullName>
        <description>Gender as provided by AHPRA</description>
        <label>AHPRA - Sex</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AHPRA_Specialty__c</fullName>
        <label>AHPRA - Specialty</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_State__c</fullName>
        <label>AHPRA - State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Suburb__c</fullName>
        <label>AHPRA - Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_URL__c</fullName>
        <label>AHPRA - URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>AHPRA_University__c</fullName>
        <label>AHPRA - University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AHPRA_Year_of_Qualification__c</fullName>
        <label>AHPRA - Year of Qualification</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Valid__c</fullName>
        <label>Address Valid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check is address validated through DataSam for AUS or NZ and Google for International</description>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Verification_Number_First__c</fullName>
        <label>Address Verification Number First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Verification_Number_Last__c</fullName>
        <label>Address Verification Number Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Verification_Number__c</fullName>
        <label>Address Verification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Verification__c</fullName>
        <label>Address Verification</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Page_views__c</fullName>
        <label>Average Page views</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broadcast_Clicks__c</fullName>
        <label>Broadcast Clicks</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_Number__c</fullName>
        <label>CPD Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Medicare Local</fullName>
                </value>
                <value>
                    <fullName>Exclude</fullName>
                </value>
                <value>
                    <fullName>HealthCert/UQ Newsletter list</fullName>
                </value>
                <value>
                    <fullName>RACGP GP Clinical Updates</fullName>
                </value>
                <value>
                    <fullName>2013 Fax SCCONF</fullName>
                </value>
                <value>
                    <fullName>Masters of Medicine</fullName>
                </value>
                <value>
                    <fullName>SCC 2011 - Conference Updates List</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>NSCC</fullName>
                </value>
                <value>
                    <fullName>non sponsors list</fullName>
                </value>
                <value>
                    <fullName>Course Chair</fullName>
                </value>
                <value>
                    <fullName>2011 Fax ADERM</fullName>
                </value>
                <value>
                    <fullName>2012 Reg Int SCCONF</fullName>
                </value>
                <value>
                    <fullName>2012 Fax SCMED</fullName>
                </value>
                <value>
                    <fullName>Fax back interest UQ Masters of Medicine</fullName>
                </value>
                <value>
                    <fullName>2014 Fax SCSUG</fullName>
                </value>
                <value>
                    <fullName>Presenter</fullName>
                </value>
                <value>
                    <fullName>Presenter 2016</fullName>
                </value>
                <value>
                    <fullName>2010 Fax SC</fullName>
                </value>
                <value>
                    <fullName>2010 Fax SCMED</fullName>
                </value>
                <value>
                    <fullName>2014 Fax SCCONF</fullName>
                </value>
                <value>
                    <fullName>2014 Fax GDERM</fullName>
                </value>
                <value>
                    <fullName>Leo Pharma Online Bus. Course allocation</fullName>
                </value>
                <value>
                    <fullName>SCCANZ Member</fullName>
                </value>
                <value>
                    <fullName>2011 Fax SCSUG</fullName>
                </value>
                <value>
                    <fullName>2011 Fax SCMED</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>(HC) Contact / Newsletter Footer</fullName>
                </value>
                <value>
                    <fullName>2014 Fax SCMED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Presented__c</fullName>
        <label>Course Presented</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>SCTIC</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCBUS</fullName>
                </value>
                <value>
                    <fullName>SCMED</fullName>
                </value>
                <value>
                    <fullName>SCONF</fullName>
                </value>
                <value>
                    <fullName>SCSUG</fullName>
                </value>
                <value>
                    <fullName>SKDIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoursesEnrolledIn__c</fullName>
        <label>Courses_Enrolled_In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courses_Attended_by_Course_Code__c</fullName>
        <label>Courses Attended by Course Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ACDTL</fullName>
                </value>
                <value>
                    <fullName>ACNUT</fullName>
                </value>
                <value>
                    <fullName>ACSUG</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADERM-WEB</fullName>
                </value>
                <value>
                    <fullName>ADSG</fullName>
                </value>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>AKLMC</fullName>
                </value>
                <value>
                    <fullName>ASTH1</fullName>
                </value>
                <value>
                    <fullName>ASTH2</fullName>
                </value>
                <value>
                    <fullName>ASTH3</fullName>
                </value>
                <value>
                    <fullName>AWIUS</fullName>
                </value>
                <value>
                    <fullName>AWVAS</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>FOCSC</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>GPCU</fullName>
                </value>
                <value>
                    <fullName>GPUPD</fullName>
                </value>
                <value>
                    <fullName>GPUPD16</fullName>
                </value>
                <value>
                    <fullName>GPUPD17</fullName>
                </value>
                <value>
                    <fullName>GPUPD18</fullName>
                </value>
                <value>
                    <fullName>GPUPD-WEB</fullName>
                </value>
                <value>
                    <fullName>JOINT</fullName>
                </value>
                <value>
                    <fullName>MBMM</fullName>
                </value>
                <value>
                    <fullName>MBMM-WEB</fullName>
                </value>
                <value>
                    <fullName>PCAST</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCDTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses_Enrolled_In__c</fullName>
        <label>Courses Enrolled In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0607-SC-BNE-SCMED</fullName>
                </value>
                <value>
                    <fullName>0608-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0608-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0609-SC-AUK-SCMED</fullName>
                </value>
                <value>
                    <fullName>0610-SC-ADL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0611-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0611-SC-PER-SCMED</fullName>
                </value>
                <value>
                    <fullName>0705-SC-BNE-ADERM</fullName>
                </value>
                <value>
                    <fullName>0705-SC-BNE-SCMED</fullName>
                </value>
                <value>
                    <fullName>0705-SC-MEL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0706-SC-MEL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0706-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0707-SC-SYD-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0708-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0709-SC-OOL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0709-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0709-SC-SYD-ADERM</fullName>
                </value>
                <value>
                    <fullName>0709-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0710-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0802-SC-MEL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0802-SC-SYD-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0805-SC-MEL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-ADERM</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-SCMED</fullName>
                </value>
                <value>
                    <fullName>0806-SC-OOL-SKINBUS</fullName>
                </value>
                <value>
                    <fullName>0807-SC-OOL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>0809-SC-OOL-DBTB</fullName>
                </value>
                <value>
                    <fullName>0809-SC-SYD-ADERM</fullName>
                </value>
                <value>
                    <fullName>0809-SC-SYD-SCMED</fullName>
                </value>
                <value>
                    <fullName>0810-IM-BNE-IM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses_Interested_In__c</fullName>
        <label>Courses Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015-ADERM-Online</fullName>
                </value>
                <value>
                    <fullName>2015-ADL-SCMED</fullName>
                </value>
                <value>
                    <fullName>2015-ADL-SCSUG</fullName>
                </value>
                <value>
                    <fullName>2015-BNE-SCMAS</fullName>
                </value>
                <value>
                    <fullName>2015-GDCERT</fullName>
                </value>
                <value>
                    <fullName>2015-MEL-PCOP</fullName>
                </value>
                <value>
                    <fullName>2015-OOL-ADSG</fullName>
                </value>
                <value>
                    <fullName>2015-SCMAS</fullName>
                </value>
                <value>
                    <fullName>2015-SCMED-Online</fullName>
                </value>
                <value>
                    <fullName>2015-SYD-ADSG</fullName>
                </value>
                <value>
                    <fullName>2015-SYD-PCOP</fullName>
                </value>
                <value>
                    <fullName>2015-USA</fullName>
                </value>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADSG</fullName>
                </value>
                <value>
                    <fullName>ASTH1</fullName>
                </value>
                <value>
                    <fullName>ASTH2</fullName>
                </value>
                <value>
                    <fullName>ASTH3</fullName>
                </value>
                <value>
                    <fullName>Clinical Attachment</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>GPCU</fullName>
                </value>
                <value>
                    <fullName>MBUS</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCCMCLASS-2016</fullName>
                </value>
                <value>
                    <fullName>SCCONF 2015</fullName>
                </value>
                <value>
                    <fullName>SCCONF-2016</fullName>
                </value>
                <value>
                    <fullName>SCMED</fullName>
                </value>
                <value>
                    <fullName>SCSUG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Courses_NOT_Interested_In__c</fullName>
        <label>Courses NOT Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Skin Cancer</fullName>
                </value>
                <value>
                    <fullName>Aesthetic Medicine</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>ACDER</fullName>
                </value>
                <value>
                    <fullName>ADERM</fullName>
                </value>
                <value>
                    <fullName>ADERM-WEB</fullName>
                </value>
                <value>
                    <fullName>ADSG</fullName>
                </value>
                <value>
                    <fullName>ADSGHN</fullName>
                </value>
                <value>
                    <fullName>ADSGNL</fullName>
                </value>
                <value>
                    <fullName>ASTH1</fullName>
                </value>
                <value>
                    <fullName>ASTH2</fullName>
                </value>
                <value>
                    <fullName>ASTH3</fullName>
                </value>
                <value>
                    <fullName>DIPDER</fullName>
                </value>
                <value>
                    <fullName>GDERM</fullName>
                </value>
                <value>
                    <fullName>GPUPD</fullName>
                </value>
                <value>
                    <fullName>PCDER</fullName>
                </value>
                <value>
                    <fullName>PCOP</fullName>
                </value>
                <value>
                    <fullName>SCC</fullName>
                </value>
                <value>
                    <fullName>SCMED</fullName>
                </value>
                <value>
                    <fullName>SCMED-WEB</fullName>
                </value>
                <value>
                    <fullName>SCSUG</fullName>
                </value>
                <value>
                    <fullName>SCTIC</fullName>
                </value>
                <value>
                    <fullName>SKDIN</fullName>
                </value>
                <value>
                    <fullName>SKINBUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_in_workflow__c</fullName>
        <label>Currently in workflow</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_ClientID__c</fullName>
        <description>for storing DB Client ID</description>
        <externalId>true</externalId>
        <label>DM_ClientID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DM identifier</description>
        <label>DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Address_Validated__c</fullName>
        <description>Date that the address was last validated</description>
        <label>Date Address Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Skills_Updated__c</fullName>
        <label>Date Skills Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dietary_Selection_Other__c</fullName>
        <label>Dietary Selection Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Selection__c</fullName>
        <label>Dietary Selection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gluten Free</fullName>
                </value>
                <value>
                    <fullName>Halal</fullName>
                </value>
                <value>
                    <fullName>Kosher</fullName>
                </value>
                <value>
                    <fullName>No Beef or Pork</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Vegan</fullName>
                </value>
                <value>
                    <fullName>Vegetarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_You_Use_a_Dermatoscope__c</fullName>
        <label>Do You Use a Dermatoscope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address_2__c</fullName>
        <description>SK</description>
        <label>Email Address 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emails_Bounced__c</fullName>
        <label>Emails Bounced</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Clicked__c</fullName>
        <label>Emails Clicked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Delivered__c</fullName>
        <label>Emails Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emails_Opened__c</fullName>
        <label>Emails Opened</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Facebook_Clicks__c</fullName>
        <label>Facebook Clicks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Conversion__c</fullName>
        <label>First Conversion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Status__c</fullName>
        <label>Flag Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_allergies__c</fullName>
        <label>Food allergies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Gender</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gnaf_ID__c</fullName>
        <label>Gnaf ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCREG_Country_account__c</fullName>
        <label>HCREG Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                    <default>true</default>
                    <label>AU</label>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HC_Leader__c</fullName>
        <label>HC Leader</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMBER</fullName>
                </value>
                <value>
                    <fullName>CAMPBELL</fullName>
                </value>
                <value>
                    <fullName>DON</fullName>
                </value>
                <value>
                    <fullName>MASTER</fullName>
                </value>
                <value>
                    <fullName>OWEN</fullName>
                </value>
                <value>
                    <fullName>RICHARD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_Other__c</fullName>
        <label>How Did You Hear Other</label>
        <length>119</length>
        <type>Text</type>
    </fields>
</CustomObject>